--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Kiboko NFT"
+      content="Kiboko NFT"
     />
 
     <!-- Bootstrap CSS -->
@@ -25,7 +25,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>NFT Portfolio Landing Page</title>
+    <title>Kiboko NFT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
